// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Select should allow being disabled with missing options: no options 1`] = `
<select
  props="{
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-5"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should allow being disabled with missing options: options, but disabled 1`] = `
<select
  props="{
  "options": [
    "lorem",
    "ipsum",
    "hello",
    "world"
  ],
  "isDisabled": true,
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-7"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should allow being disabled with missing options: options, but no content 1`] = `
<select
  props="{
  "options": [],
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="false"
      class="pf-v6-c-menu-toggle pf-m-disabled curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-6"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      disabled=""
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should render a checkbox variant: checklist 1`] = `
<select
  props="{
  "variant": "checkbox",
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="true"
      class="pf-v6-c-menu-toggle pf-m-expanded curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-2"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Select option 
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should render a dropdown variant: dropdown 1`] = `
<select
  props="{
  "variant": "dropdown",
  "toggle": {
    "variant": "secondary"
  },
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="true"
      class="pf-v6-c-menu-toggle pf-m-expanded pf-m-secondary curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-secondary-1"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        Select option
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should render a single variant: select 1`] = `
<select
  props="{
  "children": []
}"
>
  <div
    class="curiosity-select curiosity-select__inline fadein__fast"
  >
    <button
      aria-expanded="true"
      class="pf-v6-c-menu-toggle pf-m-expanded curiosity-select-pf__toggle"
      data-ouia-component-id="OUIA-Generated-MenuToggle-1"
      data-ouia-component-type="PF6/MenuToggle"
      data-ouia-safe="true"
      type="button"
    >
      <span
        class="pf-v6-c-menu-toggle__text"
      >
        hello
      </span>
      <span
        class="pf-v6-c-menu-toggle__controls"
      >
        <span
          class="pf-v6-c-menu-toggle__toggle-icon"
        >
          <svg
            aria-hidden="true"
            class="pf-v6-svg"
            fill="currentColor"
            height="1em"
            role="img"
            viewBox="0 0 320 512"
            width="1em"
          >
            <path
              d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
            />
          </svg>
        </span>
      </span>
    </button>
  </div>
</select>
`;

exports[`Select should return an emulated onselect/onchange event, single: default emulated event 1`] = `
[
  [
    {
      "_reactName": "onClick",
      "_targetInst": null,
      "altKey": false,
      "bubbles": true,
      "button": 0,
      "buttons": 0,
      "cancelable": true,
      "clientX": 0,
      "clientY": 0,
      "ctrlKey": false,
      "currentTarget": <button
        aria-selected="false"
        class="pf-v6-c-menu__item curiosity-select-pf__option"
        role="option"
        tabindex="0"
        type="button"
      >
        <span
          class="pf-v6-c-menu__item-main"
        >
          <span
            class="pf-v6-c-menu__item-text"
          >
            lorem
          </span>
        </span>
      </button>,
      "defaultPrevented": false,
      "detail": 0,
      "eventPhase": 3,
      "getModifierState": [Function],
      "isDefaultPrevented": [Function],
      "isPropagationStopped": [Function],
      "isTrusted": false,
      "metaKey": false,
      "movementX": 0,
      "movementY": 0,
      "nativeEvent": MouseEvent {
        "isTrusted": false,
      },
      "pageX": 0,
      "pageY": 0,
      "relatedTarget": null,
      "screenX": 0,
      "screenY": 0,
      "shiftKey": false,
      "target": <button
        aria-selected="false"
        class="pf-v6-c-menu__item curiosity-select-pf__option"
        role="option"
        tabindex="0"
        type="button"
      >
        <span
          class="pf-v6-c-menu__item-main"
        >
          <span
            class="pf-v6-c-menu__item-text"
          >
            lorem
          </span>
        </span>
      </button>,
      "timeStamp": undefined,
      "type": "click",
      "view": null,
    },
    null,
  ],
]
`;

exports[`helpers formatEvent should modify the event object for select by exposing selected, selectedIndex, select type, and value, dropdown 1`] = `
{
  "checked": undefined,
  "currentTarget": {},
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "selected": {
    "index": "mock",
    "isSelected": true,
    "title": "lorem",
    "value": "lorem",
  },
  "selectedIndex": [
    "mock",
  ],
  "target": {},
  "type": "select-one",
  "value": "lorem",
}
`;

exports[`helpers formatEvent should modify the event object for select by exposing selected, selectedIndex, select type, and value, multiple 1`] = `
{
  "checked": undefined,
  "currentTarget": {},
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "selected": [
    {
      "index": "mock",
      "isSelected": true,
      "title": "lorem",
      "value": "lorem",
    },
    {
      "index": "mock",
      "isSelected": true,
      "title": "ipsum",
      "value": "ipsum",
    },
  ],
  "selectedIndex": [
    "mock",
    "mock",
  ],
  "target": {},
  "type": "select-multiple",
  "value": [
    "lorem",
    "ipsum",
  ],
}
`;

exports[`helpers formatEvent should modify the event object for select by exposing selected, selectedIndex, select type, and value, single 1`] = `
{
  "checked": undefined,
  "currentTarget": {},
  "id": undefined,
  "keyCode": undefined,
  "name": undefined,
  "persist": [Function],
  "selected": {
    "index": "mock",
    "isSelected": true,
    "title": "ipsum",
    "value": "lorem",
  },
  "selectedIndex": [
    "mock",
  ],
  "target": {},
  "type": "select-one",
  "value": "lorem",
}
`;

exports[`helpers updateDataAttributes should update the data- attributes of a dom element: attributes 1`] = `
<div>
  <span
    data-hello="world"
  />
</div>
`;

exports[`helpers updateOptions should allow an array of varied options, null, undefined, NaN 1`] = `
[
  {
    "index": 0,
    "isSelected": false,
    "key": "c926437026",
    "title": "NaN",
    "value": NaN,
  },
  {
    "index": 1,
    "isSelected": false,
    "key": "c505095949",
    "title": "undefined",
    "value": undefined,
  },
  {
    "index": 2,
    "isSelected": false,
    "key": "c261075650",
    "title": "null",
    "value": null,
  },
  {
    "index": 3,
    "isSelected": false,
    "key": "c1931250018",
    "title": "1",
    "value": 1,
  },
  {
    "index": 4,
    "isSelected": false,
    "key": "c108532930",
    "title": "a",
    "value": "a",
  },
]
`;

exports[`helpers updateOptions should allow an array of varied options, object 1`] = `
[
  {
    "index": 0,
    "isSelected": false,
    "key": "c1371476706",
    "title": "undefined",
    "value": "hello",
  },
  {
    "index": 1,
    "isSelected": false,
    "key": "c-524410488",
    "title": "undefined",
    "value": {
      "world": "world",
    },
  },
]
`;

exports[`helpers updateOptions should allow an array of varied options, string 1`] = `[]`;

exports[`helpers updateOptions should allow an array of varied options, string, number 1`] = `
[
  {
    "index": 0,
    "isSelected": false,
    "key": "c-433542162",
    "title": "lorem",
    "value": "lorem",
  },
  {
    "index": 1,
    "isSelected": false,
    "key": "c1931250018",
    "title": "1",
    "value": 1,
  },
  {
    "index": 2,
    "isSelected": false,
    "key": "c2143524452",
    "title": "2",
    "value": 2,
  },
]
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, multiple preselected, single selected 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c689449643",
      "title": "undefined",
      "value": "lorem ipsum",
    },
    {
      "index": 2,
      "isSelected": true,
      "key": "c1578675715",
      "title": "undefined",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c689449643",
    "title": "undefined",
    "value": "lorem ipsum",
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, multiple selected 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": true,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c689449643",
      "title": "undefined",
      "value": "lorem ipsum",
    },
    {
      "index": 2,
      "isSelected": true,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": true,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": [
    {
      "index": 0,
      "isSelected": true,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c689449643",
      "title": "undefined",
      "value": "lorem ipsum",
    },
    {
      "index": 2,
      "isSelected": true,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 4,
      "isSelected": true,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, none 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": undefined,
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, number 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 2,
      "isSelected": true,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": {
    "index": 2,
    "isSelected": true,
    "key": "c-1939168410",
    "title": "3",
    "value": 3,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, object 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c689449643",
      "title": "undefined",
      "value": "lorem ipsum",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c689449643",
    "title": "undefined",
    "value": "lorem ipsum",
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, object as value 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c-1505147529",
      "title": "undefined",
      "value": {
        "data": "lorem ipsum",
      },
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c-1505147529",
    "title": "undefined",
    "value": {
      "data": "lorem ipsum",
    },
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, preselected 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c689449643",
      "title": "undefined",
      "value": "lorem ipsum",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c689449643",
    "title": "undefined",
    "value": "lorem ipsum",
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful NaN value 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c926437026",
      "title": "NaN",
      "value": NaN,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c926437026",
    "title": "NaN",
    "value": NaN,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful NaN value as array lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c926437026",
      "title": "NaN",
      "value": NaN,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c926437026",
    "title": "NaN",
    "value": NaN,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful NaN value as title string lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c926437026",
      "title": "NaN",
      "value": NaN,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c926437026",
    "title": "NaN",
    "value": NaN,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful empty value 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c2055062677",
      "title": "Empty",
      "value": "",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c2055062677",
    "title": "Empty",
    "value": "",
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful empty value as array lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c2055062677",
      "title": "Empty",
      "value": "",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c2055062677",
    "title": "Empty",
    "value": "",
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful null value 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c261075650",
      "title": "null",
      "value": null,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c261075650",
    "title": "null",
    "value": null,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful null value as array lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c261075650",
      "title": "null",
      "value": null,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c261075650",
    "title": "null",
    "value": null,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful null value as title string lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c261075650",
      "title": "null",
      "value": null,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c261075650",
    "title": "null",
    "value": null,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful undefined as title string lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c505095949",
      "title": "undefined",
      "value": undefined,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c505095949",
    "title": "undefined",
    "value": undefined,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful undefined value, this will fail 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": false,
      "key": "c505095949",
      "title": "undefined",
      "value": undefined,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": undefined,
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, purposeful undefined with required array lookup 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": false,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": true,
      "key": "c505095949",
      "title": "undefined",
      "value": undefined,
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
    {
      "index": 3,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 4,
      "isSelected": false,
      "key": "c-1726893976",
      "title": "4",
      "value": 4,
    },
  ],
  "selected": {
    "index": 1,
    "isSelected": true,
    "key": "c505095949",
    "title": "undefined",
    "value": undefined,
  },
}
`;

exports[`helpers updateOptionsSelectedOptions should add isSelected enhancements to options, string 1`] = `
{
  "options": [
    {
      "index": 0,
      "isSelected": true,
      "key": "c108532930",
      "title": "a",
      "value": "a",
    },
    {
      "index": 1,
      "isSelected": false,
      "key": "c-1081172732",
      "title": "b",
      "value": "b",
    },
    {
      "index": 2,
      "isSelected": false,
      "key": "c-1939168410",
      "title": "3",
      "value": 3,
    },
  ],
  "selected": {
    "index": 0,
    "isSelected": true,
    "key": "c108532930",
    "title": "a",
    "value": "a",
  },
}
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, NaN 1`] = `
[
  "NaN",
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, array 1`] = `
[
  "a",
  "b",
  3,
  {
    "value": "hello",
  },
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, null 1`] = `
[
  "null",
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, null, undefined, NaN 1`] = `
[
  "a",
  "b",
  3,
  {
    "value": "hello",
  },
  "null",
  "undefined",
  NaN,
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, number 1`] = `
[
  3,
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, object 1`] = `
[
  {
    "value": "hello",
  },
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, string 1`] = `
[
  "a",
]
`;

exports[`helpers updateSelectedOptions should only allow lists or any single option type, undefined 1`] = `[]`;

exports[`useOnSelect should ignore returning updated options' state through the returned onSelect callback when option is disabled: disabled 1`] = `[]`;

exports[`useOnSelect should return consistent, updated options, and a selected title: properties 1`] = `
{
  "onSelect": [Function],
  "options": [
    {
      "index": 0,
      "isSelected": true,
      "key": "c1605625444",
      "title": "hello",
      "value": "hello",
    },
    {
      "index": 1,
      "isSelected": false,
      "key": "c1077623780",
      "title": "world",
      "value": "world",
    },
  ],
  "selectedOption": {
    "index": 0,
    "isSelected": true,
    "key": "c1605625444",
    "title": "hello",
    "value": "hello",
  },
}
`;

exports[`useOnSelect should return specific properties: properties 1`] = `
{
  "onSelect": [Function],
  "options": [],
  "selectedOption": undefined,
}
`;

exports[`useOnSelect should return updated options' state through the returned onSelect callback for checkboxes: checkboxes 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": {},
      "id": undefined,
      "keyCode": undefined,
      "name": undefined,
      "persist": [Function],
      "selected": [
        {
          "index": 1,
          "isSelected": true,
          "key": "c1551355848",
          "title": "ipsum",
          "value": "ipsum",
        },
      ],
      "selectedIndex": [
        1,
      ],
      "target": {},
      "type": "select-multiple",
      "value": [
        "ipsum",
      ],
    },
  ],
]
`;

exports[`useOnSelect should return updated options' state through the returned onSelect callback for default: default 1`] = `
[
  [
    {
      "checked": undefined,
      "currentTarget": {},
      "id": undefined,
      "keyCode": undefined,
      "name": undefined,
      "persist": [Function],
      "selected": {
        "index": 1,
        "isSelected": true,
        "key": "c1551355848",
        "title": "ipsum",
        "value": "ipsum",
      },
      "selectedIndex": [
        1,
      ],
      "target": {},
      "type": "select-one",
      "value": "ipsum",
    },
  ],
]
`;
